--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -15,10 +15,17 @@ order += "run_watch VPN"
 order += "ethernet _first_"
 #order += "battery 0"
 #order += "cpu_temperature 0"
+order += "memory"
 order += "ethernet tun0"
 order += "load"
 order += "volume master"
 order += "tztime local"
+
+memory {
+        format = "%used"
+        threshold_degraded = "10%"
+        format_degraded = "MEMORY: %free"
+}
 
 disk "/" {
         format = "  %avail/%total "
