--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -1,86 +1,47 @@
 general {
-        colors = true
-        color_good =     '#13A10E'
-        color_degraded = '#16C60C'
-        color_bad =      '#3A96DD'
-        interval = 5
+	colors = true
+	interval = 5
+
 }
 
-order += "disk /"
-order += "disk /bs1phc"
-order += "disk /storage"
-order += "disk /external"
-order += "run_watch VPN"
-#order += "wireless _first_"
-order += "ethernet _first_"
-#order += "battery 0"
-#order += "cpu_temperature 0"
-order += "memory"
-order += "ethernet tun0"
-order += "load"
-order += "volume master"
-order += "tztime local"
+order+="ethernet tun0"
+order+="wireless _first_"
+order+="load"
+order+="disk /"
+order+= "memory"
+order+= "tztime local"
+order+="volume master"
+order+= "battery all"
 
-memory {
-        format = "%used"
-        threshold_degraded = "10%"
-        format_degraded = "MEMORY: %free"
+ethernet tun0 {
+        format_up="vpn: %ip"
+        format_down="vpn:down"
+
+}
+
+wireless _first_ {
+        format_up = "W: %ip"
+        format_down = "W: down"
 }
 
 disk "/" {
-        format = "  %avail/%total "
+        format = "%avail"
 }
 
-
-disk "/external" { 
-	format = "  %avail/%total "
-}
-disk "/bs1phc" { 
-	format = "  %avail/%total "
-}
-disk "/storage" {
-        format = "  %avail/%total "   
-}
-
-run_watch VPN {
-        pidfile = "/sys/class/net/tun0"
-	format = "%title: "
-	format_down = "%title: "
-}
-ethernet tun0 {
-	format_up="W: %ip"
-	format_down="W:down"
-
-}
-
-#wireless _first_ {
-#        format_up = " (%quality at %essid) %ip"
-#        format_down = " down"
-#}
-
-ethernet _first_ {
-        # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = ""
-}
-
-#battery 0 {
-#        format = "%status %remaining (%consumption)"
-#	status_chr = ""
-#	status_bat = ""
-#	status_full = ""
-#	hide_seconds = "true"
-#	integer_battery_capacity = "true"
-#	low_threshold = "20"
-#	threshold_type = "time"
-#}
-
-#cpu_temperature 0 {
-#        format = " %degrees°C"
-#}
 
 load {
-        format = " %1min"
+        format = "%1min"
+}
+
+
+memory {
+        format = "%used | %available"
+        threshold_degraded = "1G"
+        format_degraded = "MEMORY < %available"
+}
+
+tztime local {
+	format = "%Y-%m-%d %H:%M:%S"
 }
 
 volume master {
@@ -91,6 +52,5 @@ volume master {
         mixer_idx = 0
 }
 
-tztime local {
-        format = "  %a %b %d | %H:%M:%S"
-}
+battery all {
+        format = "%status %percentage %remaining"
