--- a/vms/i3status/config
+++ b/vms/i3status/config
@@ -1,51 +1,24 @@
 general {
         colors = true
-        color_good =     '#13A10E'
-        color_degraded = '#16C60C'
-        color_bad =      '#EE2424'
         interval = 5
 }
 
 order += "disk /"
-order += "disk /bs1phc"
-order += "disk /storage"
-order += "disk /external"
 order += "run_watch VPN"
-#order += "wireless _first_"
-order += "ethernet _first_"
-#order += "battery 0"
-#order += "cpu_temperature 0"
-order += "memory"
 order += "ethernet tun0"
+order += "ethernet _first_"
 order += "load"
-order += "volume master"
+order += "memory"
 order += "tztime local"
-
-memory {
-        format = "%used"
-        threshold_degraded = "10%"
-        format_degraded = "MEMORY: %free"
-}
 
 disk "/" {
         format = "  %avail/%total "
 }
 
-
-disk "/external" { 
-	format = "  %avail/%total "
-}
-disk "/bs1phc" { 
-	format = "  %avail/%total "
-}
-disk "/storage" {
-        format = "  %avail/%total "   
-}
-
 run_watch VPN {
         pidfile = "/sys/class/net/tun0"
-	format = "%title: "
-	format_down = "%title: "
+	format = "%title:  "
+	format_down = "%title:  "
 }
 ethernet tun0 {
 	format_up="W: %ip"
@@ -53,10 +26,6 @@ ethernet tun0 {
 
 }
 
-#wireless _first_ {
-#        format_up = " (%quality at %essid) %ip"
-#        format_down = " down"
-#}
 
 ethernet _first_ {
         # if you use %speed, i3status requires root privileges
@@ -64,31 +33,15 @@ ethernet _first_ {
         format_down = ""
 }
 
-#battery 0 {
-#        format = "%status %remaining (%consumption)"
-#	status_chr = ""
-#	status_bat = ""
-#	status_full = ""
-#	hide_seconds = "true"
-#	integer_battery_capacity = "true"
-#	low_threshold = "20"
-#	threshold_type = "time"
-#}
-
-#cpu_temperature 0 {
-#        format = " %degrees°C"
-#}
 
 load {
         format = " %1min"
 }
 
-volume master {
-        format = " Volume: %volume "
-        format_muted = " Volume: Muted (%volume) "
-        device = "default"
-        mixer = "Master"
-        mixer_idx = 0
+memory{
+	format = "%used | %available"
+	threshold_degraded = "1G"
+	format_degraded = "MEMORY < %available"
 }
 
 tztime local {
