--- a/.config/i3/config
+++ b/.config/i3/config
@@ -27,18 +27,18 @@ focus_follows_mouse no
 bindsym $mod+Return exec alacritty
 bindsym Print exec flameshot gui
 
-bindsym $mod+d exec "dmenu_run -nf '#FFFFFF' -nb '#000000' -sb '#333333' -sf '#FFFFFF' -fn 'monospace-10' -p 'dmenu prompt &gt;'"
+bindsym $mod+d exec rofi -show drun 
 
 
 ### System keybinds ########################################
-# bindsym XF86MonBrightnessUp exec "xbacklight -inc 5; notify-send 'Brightness up'"
-# bindsym XF86MonBrightnessDown exec "xbacklight -dec 5; notify-send 'Brightness down'"
-# bindsym XF86AudioRaiseVolume exec "amixer set Master 5%+; notify-send 'Volume up'"
-# bindsym XF86AudioLowerVolume exec "amixer set Master 5%-; notify-send 'Volume down'"
-# bindsym XF86AudioMute exec "amixer set Master toggle; notify-send 'Volume toggled'"
-# bindsym XF86AudioPlay exec playerctl play-pause
-# bindsym XF86AudioNext exec playerctl next
-# bindsym XF86AudioPrev exec playerctl previous
+bindsym XF86MonBrightnessUp exec "xbacklight -inc 5; notify-send 'Brightness up'"
+bindsym XF86MonBrightnessDown exec "xbacklight -dec 5; notify-send 'Brightness down'"
+bindsym XF86AudioRaiseVolume exec "amixer set Master 5%+; notify-send 'Volume up'"
+bindsym XF86AudioLowerVolume exec "amixer set Master 5%-; notify-send 'Volume down'"
+bindsym XF86AudioMute exec "amixer set Master toggle; notify-send 'Volume toggled'"
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
 
 ### Execs
 exec --no-startup-id nm-applet
