--- a/desktop/i3/config
+++ b/desktop/i3/config
@@ -1,7 +1,7 @@
 set $mod Mod4
 set $alt Mod1
 
-font pango: Cousine Nerd Font 7  
+font pango: Cousine Nerd Font 8  
 
 
 ### Hide borders
@@ -46,9 +46,9 @@ exec --no-startup-id picom
 exec --no-startup-id pulseaudio
 exec --no-startup-id nitrogen --restore
 exec --no-startup-id flameshot
+exec conky -c ~/.config/conky/conky.conf
 
-
-### Windows #####################################
+## Windows #####################################
 
 # change focus
 bindsym $mod+j focus left
